--- a/contacts.html
+++ b/contacts.html
@@ -101,7 +101,7 @@
                             <div class="contacts__view1">
                                 <div class="service-info__video video">
                                     <a href="videos/Countdown7.mp4" data-fancybox class="video__img">
-                                        <img srcset="img/video5_2x.jpg 2x" src="img/video5.jpg" />
+                                        <img srcset="img/video5_2x.webp 2x" src="img/video5.webp" />
                                     </a>
                                     <div class="video-nav">
                                         <button class="video-nav__play">
