--- a/nav.html
+++ b/nav.html
@@ -48,7 +48,7 @@
         <a href="workers.html" style="display: block; margin-bottom: 20px;">
             Специалисты
         </a>
-        <a href="workers.html" style="display: block; margin-bottom: 20px;">
+        <a href="contacts.html" style="display: block; margin-bottom: 20px;">
             Контакты
         </a>
 
