--- a/reviews.html
+++ b/reviews.html
@@ -149,7 +149,7 @@
                                         <div class="review-card__video">
                                             <div class="video">
                                                 <a href="videos/Countdown7.mp4" data-fancybox class="video__img">
-                                                    <img srcset="img/video2_2x.jpg 2x" src="img/video2.jpg" />
+                                                    <img srcset="img/video2_2x.webp 2x" src="img/video2.webp" />
                                                 </a>
                                                 <div class="video-nav">
                                                     <button class="video-nav__play">
@@ -200,7 +200,7 @@
                                         <div class="review-card__video _small">
                                             <div class="video">
                                                 <a href="videos/Countdown7.mp4" data-fancybox class="video__img">
-                                                    <img srcset="img/video3_2x.jpg 2x" src="img/video3.jpg" />
+                                                    <img srcset="img/video3_2x.webp 2x" src="img/video3.webp" />
                                                 </a>
                                                 <div class="video-nav">
                                                     <button class="video-nav__play">
