--- a/prices.html
+++ b/prices.html
@@ -183,17 +183,17 @@
                 <div class="container">
                     <div class="prices-page__items">
                         <div id="price1" class="price-group">
-                            <div class="price-group__show">
-                                <div class="price-group__title">
-                                    Аппаратная косметология
-                                </div>
-                                <button class="price-group__btn">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                        <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                    </svg>
-                                </button>
-                            </div>
+                            <button class="price-group__show">
+                                <span class="price-group__title">
+            Аппаратная косметология
+        </span>
+                                <span class="price-group__btn">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+                <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </span>
+                            </button>
                             <div class="price-group__hidden">
                                 <div class="price-group__services">
                                     <div class="price-group__subtitle">
@@ -420,17 +420,17 @@
                         </div>
 
                         <div id="price2" class="price-group">
-                            <div class="price-group__show">
-                                <div class="price-group__title">
-                                    Парикмахерские услуги
-                                </div>
-                                <button class="price-group__btn">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                        <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                    </svg>
-                                </button>
-                            </div>
+                            <button class="price-group__show">
+                                <span class="price-group__title">
+            Парикмахерские услуги
+        </span>
+                                <span class="price-group__btn">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+                <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </span>
+                            </button>
                             <div class="price-group__hidden">
                                 <div class="price-group__services">
                                     <div class="price-group__subtitle">
@@ -657,17 +657,17 @@
                         </div>
 
                         <div id="price3" class="price-group">
-                            <div class="price-group__show">
-                                <div class="price-group__title">
-                                    Маникюр и педикюр
-                                </div>
-                                <button class="price-group__btn">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                        <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                    </svg>
-                                </button>
-                            </div>
+                            <button class="price-group__show">
+                                <span class="price-group__title">
+            Маникюр и педикюр
+        </span>
+                                <span class="price-group__btn">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+                <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </span>
+                            </button>
                             <div class="price-group__hidden">
                                 <div class="price-group__services">
                                     <div class="price-group__subtitle">
@@ -894,17 +894,17 @@
                         </div>
 
                         <div id="price4" class="price-group">
-                            <div class="price-group__show">
-                                <div class="price-group__title">
-                                    Инъекционная косметология
-                                </div>
-                                <button class="price-group__btn">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                        <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                    </svg>
-                                </button>
-                            </div>
+                            <button class="price-group__show">
+                                <span class="price-group__title">
+            Инъекционная косметология
+        </span>
+                                <span class="price-group__btn">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+                <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </span>
+                            </button>
                             <div class="price-group__hidden">
                                 <div class="price-group__services">
                                     <div class="price-group__subtitle">
@@ -1131,17 +1131,17 @@
                         </div>
 
                         <div id="price5" class="price-group">
-                            <div class="price-group__show">
-                                <div class="price-group__title">
-                                    Уход за лицом
-                                </div>
-                                <button class="price-group__btn">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                        <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                    </svg>
-                                </button>
-                            </div>
+                            <button class="price-group__show">
+                                <span class="price-group__title">
+            Уход за лицом
+        </span>
+                                <span class="price-group__btn">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+                <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </span>
+                            </button>
                             <div class="price-group__hidden">
                                 <div class="price-group__services">
                                     <div class="price-group__subtitle">
@@ -1368,17 +1368,17 @@
                         </div>
 
                         <div id="price6" class="price-group">
-                            <div class="price-group__show">
-                                <div class="price-group__title">
-                                    Уход за телом
-                                </div>
-                                <button class="price-group__btn">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                        <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                    </svg>
-                                </button>
-                            </div>
+                            <button class="price-group__show">
+                                <span class="price-group__title">
+            Уход за телом
+        </span>
+                                <span class="price-group__btn">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+                <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </span>
+                            </button>
                             <div class="price-group__hidden">
                                 <div class="price-group__services">
                                     <div class="price-group__subtitle">
@@ -1605,17 +1605,17 @@
                         </div>
 
                         <div id="price7" class="price-group">
-                            <div class="price-group__show">
-                                <div class="price-group__title">
-                                    SPA-процедуры
-                                </div>
-                                <button class="price-group__btn">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                        <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round" />
-                                    </svg>
-                                </button>
-                            </div>
+                            <button class="price-group__show">
+                                <span class="price-group__title">
+            SPA-процедуры
+        </span>
+                                <span class="price-group__btn">
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4V28" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+                <path d="M4 16L28 16" stroke="#AD4E2C" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </span>
+                            </button>
                             <div class="price-group__hidden">
                                 <div class="price-group__services">
                                     <div class="price-group__subtitle">
@@ -2266,7 +2266,7 @@
         </div>
     </div>
 
-    <div class="modal" id="reviewModal">
+    <div class="modal _active2" id="reviewModal">
         <div class="modal__bg _close-modal"></div>
         <div class="modal__dialog">
             <div class="modal__inner">
@@ -2279,34 +2279,34 @@
                     </div>
                 </div>
 
-                <form action="" class="modal-form">
-                    <fieldset class="fg _full">
-                        <input type="text" class="_required">
+                <form action="" class="modal-form _review-form">
+                    <div class="fg _full">
+                        <input type="text" name="name" class="_field _required">
                         <label>Имя и Фамилия</label>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="tel" class="_error">
+                        <div class="fg__text"></div>
+                    </div>
+                    <div class="fg">
+                        <input type="tel" name="phone" class="_field _error2">
                         <label>Телефон</label>
-                        <div class="fg__text">
-                            Проверьте телефон
-                        </div>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="text" class="_required _success">
+                    </div>
+                    <div class="fg">
+                        <input type="email" name="email" class="_field _required _success2">
                         <label>Почта</label>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="text">
+                        <div class="fg__text"></div>
+                    </div>
+                    <div class="fg">
+                        <input type="text" name="like" class="_field">
                         <label>Понравилось</label>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="text">
+                    </div>
+                    <div class="fg">
+                        <input type="text" name="unlike" class="_field">
                         <label>Не понравилось</label>
-                    </fieldset>
-                    <fieldset class="fg _full">
-                        <textarea class="_required"></textarea>
+                    </div>
+                    <div class="fg _full">
+                        <textarea name="impression" class="_field _required"></textarea>
                         <label>Ваши впечатления</label>
-                    </fieldset>
+                        <div class="fg__text"></div>
+                    </div>
                     <div class="file-input _full">
                         <div class="file-input__wrap">
                             <div class="custom-file-container" data-upload-id="file-input"></div>
@@ -2314,7 +2314,7 @@
                     </div>
 
                     <div class="modal-form__bottom _full">
-                        <button class="m-btn m-btn-brown">
+                        <button type="button" class="_review-submit m-btn m-btn-brown">
                             <span>Оставить отзыв</span>
                         </button>
                         <div class="modal-form__conf">
@@ -2347,77 +2347,6 @@
     <div class="modal" id="reviewModal2">
         <div class="modal__bg _close-modal"></div>
         <div class="modal__dialog _success">
-            <div class="modal__inner">
-                <div class="modal__top">
-                    <div class="modal__title">
-                        Оставить отзыв
-                    </div>
-                    <div class="modal__desc">
-                        Поделитесь своими впечатлениями
-                    </div>
-                </div>
-
-                <form action="" class="modal-form">
-                    <fieldset class="fg _full">
-                        <input type="text" class="_required">
-                        <label>Имя и Фамилия</label>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="tel" class="_error">
-                        <label>Телефон</label>
-                        <div class="fg__text">
-                            Проверьте телефон
-                        </div>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="text" class="_required _success">
-                        <label>Почта</label>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="text">
-                        <label>Понравилось</label>
-                    </fieldset>
-                    <fieldset class="fg">
-                        <input type="text">
-                        <label>Не понравилось</label>
-                    </fieldset>
-                    <fieldset class="fg _full">
-                        <textarea class="_required"></textarea>
-                        <label>Ваши впечатления</label>
-                    </fieldset>
-                    <div class="file-input _full">
-                        <div class="file-input__wrap">
-                            <div class="custom-file-container" data-upload-id="file-input"></div>
-                        </div>
-                    </div>
-
-                    <div class="modal-form__bottom _full">
-                        <button class="m-btn m-btn-brown">
-                            <span>Оставить отзыв</span>
-                        </button>
-                        <div class="modal-form__conf">
-                            Отправляя свои данные, вы даёте согласие на <a href="">обработку персональных данных</a>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="thank">
-                <div class="thank__inner">
-                    <div class="thank__icon"></div>
-                    <div class="thank__title">
-                        Спасибо!
-                    </div>
-                    <div class="thank__desc">
-                        Отзыв будет размещен после проверки модератором
-                    </div>
-                </div>
-            </div>
-            <button class="modal__close _close-modal">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4.5 4.5L19.5 19.5" stroke="#58585D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M19.5 4.5L4.5 19.5" stroke="#58585D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
-            </button>
 
         </div>
     </div>
